# miscellaneous-nlp-projects

./: README.md  pyproject.toml
data/: raw.json
notebooks/: finite_state_automata.ipynb  morphological_analysis.ipynb
output/: word_list.csv
src/: finite_state_automata.ipynb  morphological_analysis.ipynb
